--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-fetch-polyfill": "^1.1.2",
+    "react-native-responsive-dimensions": "^1.0.2",
     "react-native-splash-screen": "3.0.6",
     "react-navigation": "^1.5.9",
-    "react-native-responsive-dimensions": "^1.0.2",
-    "react-native-fetch-polyfill": "^1.1.2"
+    "react-native-button": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
