--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-af-video-player": "^0.2.1",
     "react-native-button": "^2.3.0",
     "react-native-fetch-polyfill": "^1.1.2",
+    "react-native-orientation": "^3.1.3",
     "react-native-responsive-dimensions": "^1.0.2",
     "react-native-splash-screen": "3.0.6",
-    "react-native-video": "^3.2.1",
     "react-navigation": "^1.5.9"
   },
   "devDependencies": {
